Редактирование персонажей и дайсов

--- a/src/pages/table/DiceTablePage.module.css
+++ b/src/pages/table/DiceTablePage.module.css
@@ -104,3 +104,8 @@ button:hover {
     background-color: #ffffff;
     color: #20232a;
 }
+
+button:disabled {
+    background-color: #666;
+    cursor: default;
+}
